--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -54,17 +54,22 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ## () - WEEK 4 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - SAT 12/24/2022
+<!-- videoground-beta-world -->
 
 ### () - FRI 12/23/2022
 * () start post #1019 on threejs-examples-count-down
+<!-- edit threejs examples -->
+* () edit: threejs-examples-cube-stack - proof read
 
 ### () - THU 12/22/2022
+<!-- edit threejs examples -->
+* () edit: threejs-examples-position-things-to-sphere-surface - proof read
 
 ### () - WED 12/21/2022
 * (done) forpost: threejs-examples-count-down - add ground mesh for uvmap canvas example
 * (done) edit: threejs-examples-dae-tools-sphere-normals-invert - proof read
-<!-- edit threejs examples -->
-* () edit: threejs-examples-house - proof read
+* (done) edit: threejs-examples-house - proof read
+<!-- videoground-blog-posts -->
 
 ### () - TUE 12/20/2022
 * (done) count-down.js prototype dae example
