--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -64,12 +64,13 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ### () - THU 12/22/2022
 <!-- edit threejs examples -->
 * () edit: threejs-examples-position-things-to-sphere-surface - proof read
+<!-- for post -->
+* () forpost: threejs-examples-count-down - work on many dae example
 
 ### () - WED 12/21/2022
 * (done) forpost: threejs-examples-count-down - add ground mesh for uvmap canvas example
 * (done) edit: threejs-examples-dae-tools-sphere-normals-invert - proof read
 * (done) edit: threejs-examples-house - proof read
-<!-- videoground-blog-posts -->
 
 ### () - TUE 12/20/2022
 * (done) count-down.js prototype dae example
