--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -62,8 +62,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 * () edit: threejs-examples-cube-stack - proof read
 
 ### () - THU 12/22/2022
-<!-- edit threejs examples -->
-* () edit: threejs-examples-position-things-to-sphere-surface - proof read
+* (done) edit: threejs-examples-position-things-to-sphere-surface - proof read
+* (done) forpost: threejs-examples-position-things-to-sphere-surface - r2 of the example started
 <!-- for post -->
 * () forpost: threejs-examples-count-down - work on many dae example
 
