--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -60,12 +60,14 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 * () start post #1019 on threejs-examples-count-down
 <!-- edit threejs examples -->
 * () edit: threejs-examples-cube-stack - proof read
+<!-- videoground-blog-posts -->
+
+<!-- videoground-beta-world -->
 
 ### () - THU 12/22/2022
 * (done) edit: threejs-examples-position-things-to-sphere-surface - proof read
 * (done) forpost: threejs-examples-position-things-to-sphere-surface - r2 of the example started
-<!-- for post -->
-* () forpost: threejs-examples-count-down - work on many dae example
+* (done) forpost: threejs-examples-count-down - work on many dae example
 
 ### () - WED 12/21/2022
 * (done) forpost: threejs-examples-count-down - add ground mesh for uvmap canvas example
