--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -58,8 +58,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 
 ### () - FRI 12/23/2022
 * (done) start post #1019 on threejs-examples-count-down
+* (done) edit: threejs-examples - link to threejs-examples-count-down
 <!-- edit threejs examples -->
-* () edit: threejs-examples - link to threejs-examples-count-down
 * () edit: threejs-examples-cube-stack - proof read
 <!-- videoground-blog-posts -->
 
