--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -54,16 +54,15 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ## () - WEEK 4 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - SAT 12/24/2022
+<!-- -->
+* () edit: threejs-mesh - proof read
 <!-- videoground-beta-world -->
+* () Copy over cd3 count down basic DAE assets from test threejs
 
 ### () - FRI 12/23/2022
 * (done) start post #1019 on threejs-examples-count-down
 * (done) edit: threejs-examples - link to threejs-examples-count-down
-<!-- edit threejs examples -->
-* () edit: threejs-examples-cube-stack - proof read
-<!-- videoground-blog-posts -->
-
-<!-- videoground-beta-world -->
+* (done) edit: threejs-examples-cube-stack - proof read
 
 ### () - THU 12/22/2022
 * (done) edit: threejs-examples-position-things-to-sphere-surface - proof read
