--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -54,8 +54,10 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ## () - WEEK 4 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - SAT 12/24/2022
-<!-- -->
-* () edit: threejs-mesh - proof read
+* (done) edit: threejs-mesh - proof read opening
+
+* () work on cd3 textures more
+
 <!-- videoground-beta-world -->
 * () Copy over cd3 count down basic DAE assets from test threejs
 
