--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -49,17 +49,38 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 5 - SUN 12/25/2022 - SAT 12/31/2022
+
+
+
+### () - SAT 12/31/2022
+
+### () - FRI 12/30/2022
+
+### () - THU 12/29/2022
+
+### () - WED 12/28/2022
+
+### () - TUE 12/27/2022
+*
+
+
+### () - MON 12/26/2022
+* (done) video files for first count down videos
+
+### () - SUN 12/25/2022
+* (done) Copy over cd3 count down basic DAE assets from test threejs
+* (done) work on cd3 textures more
+
+<!-------- ----------
 -- WEEK 4
 ---------- --------->
 ## () - WEEK 4 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - SAT 12/24/2022
 * (done) edit: threejs-mesh - proof read opening
-
-* () work on cd3 textures more
-
-<!-- videoground-beta-world -->
-* () Copy over cd3 count down basic DAE assets from test threejs
 
 ### () - FRI 12/23/2022
 * (done) start post #1019 on threejs-examples-count-down
