--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -64,8 +64,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ### () - WED 12/28/2022
 
 ### () - TUE 12/27/2022
-*
-
+* (done) fixed up video files for timer basic in beta world
+* (done) just a quick proof read for a few threejs posts
 
 ### () - MON 12/26/2022
 * (done) video files for first count down videos
