--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -60,8 +60,11 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ### () - FRI 12/30/2022
 
 ### () - THU 12/29/2022
+* () start post #1020 on threejs-phong-material
 
 ### () - WED 12/28/2022
+* () edit: threejs-examples-tree : proof read
+* () forpost: start a threejs-phong-material folder
 
 ### () - TUE 12/27/2022
 * (done) fixed up video files for timer basic in beta world
