--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -63,7 +63,7 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 * () start post #1020 on threejs-phong-material
 
 ### () - WED 12/28/2022
-* () edit: threejs-examples-tree : proof read
+* (done) edit: threejs-examples-tree : proof read
 * () forpost: start a threejs-phong-material folder
 
 ### () - TUE 12/27/2022
