--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -64,7 +64,11 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 
 ### () - WED 12/28/2022
 * (done) edit: threejs-examples-tree : proof read
+* (done) forpost: threejs-examples-basic-framework - r1 of example, and basic demo
+* (done) edit: threejs-examples-basic-framework - update with new code examples, proof read
+
 * () forpost: start a threejs-phong-material folder
+
 
 ### () - TUE 12/27/2022
 * (done) fixed up video files for timer basic in beta world
