--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -60,8 +60,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ### () - FRI 12/30/2022
 
 ### () - THU 12/29/2022
-* () forpost: threejs-phong-material - finish for set of demos for blog post
-* () start post #1020 on threejs-phong-material
+* (done) start post #1020 on threejs-phong-material
+* () forpost: threejs-phong-material - finish first set of demos for blog post
 
 ### () - WED 12/28/2022
 * (done) edit: threejs-examples-tree : proof read
