--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -61,7 +61,13 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 
 ### () - THU 12/29/2022
 * (done) start post #1020 on threejs-phong-material
-* () forpost: threejs-phong-material - finish first set of demos for blog post
+* (done) forpost: threejs-phong-material - finish first set of demos for blog post
+
+* () forpost: threejs-canvas-texture - new demo where I set magFilter and minFilter values
+* () edit: write abotu new filters demo
+
+* () video1 for threejs-phong-material
+* () build and publish
 
 ### () - WED 12/28/2022
 * (done) edit: threejs-examples-tree : proof read
