--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -10,5 +10,17 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ---------- --------->
 ## () - WEEK 1 - SUN 01/01/2023 - SAT 01/07/2023
 
+### () - WED 01/24/2023
+* () edit: threejs-examples-cube-stack-grid - proof read
+* () edit: threejs-euler - proof read
+
+### () - TUE 01/03/2023
+* () edit: threejs-line - proof read
+* () edit: threejs-vector3 - proof read
+
+### () - MON 01/02/2023
+* () edit: threejs-arrow-helper - proof read
+* () edit: threejs-vector3-set-from-spherical-coords - proof read
+
 ### () - SUN 01/01/2023
-* () edit: threejs-alpha-map - proof read
+* (done) edit: threejs-alpha-map - proof read
