--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -19,8 +19,9 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * () edit: threejs-vector3 - proof read
 
 ### () - MON 01/02/2023
-* () edit: threejs-arrow-helper - proof read
+* () edit: threejs-arrow-helper - proof read section 1
 * () edit: threejs-vector3-set-from-spherical-coords - proof read
 
 ### () - SUN 01/01/2023
 * (done) edit: threejs-alpha-map - proof read
+* (done) edit: threejs-arrow-helper - proof read intro
