--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,7 +21,9 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ### () - MON 01/02/2023
 * () edit: threejs-arrow-helper - proof read section 1
 * () edit: threejs-vector3-set-from-spherical-coords - proof read
+* () edit: blog-post-plan-for-2023, other blog cat posts
 
 ### () - SUN 01/01/2023
 * (done) edit: threejs-alpha-map - proof read
 * (done) edit: threejs-arrow-helper - proof read intro
+* (done) start post #1021 on blog-post-plan-for-2023
