--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -15,13 +15,20 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * () edit: threejs-euler - proof read
 
 ### () - TUE 01/03/2023
+* () edit: blog-post-plan-for-2023 - write about electionjs
+* () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
+* () edit: blog-post-plan-for-2023 - write conclusion
+* () edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
+
 * () edit: threejs-line - proof read
 * () edit: threejs-vector3 - proof read
 
 ### () - MON 01/02/2023
+* (done) edit: blog-post-plan-for-2023 - write about threejs, and linux
+
 * () edit: threejs-arrow-helper - proof read section 1
 * () edit: threejs-vector3-set-from-spherical-coords - proof read
-* () edit: blog-post-plan-for-2023, other blog cat posts
+
 
 ### () - SUN 01/01/2023
 * (done) edit: threejs-alpha-map - proof read
