--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -25,8 +25,8 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 
 ### () - MON 01/02/2023
 * (done) edit: blog-post-plan-for-2023 - write about threejs, and linux
+* (done) edit: threejs-arrow-helper - proof read section 1
 
-* () edit: threejs-arrow-helper - proof read section 1
 * () edit: threejs-vector3-set-from-spherical-coords - proof read
 
 
