--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -26,8 +26,10 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ### () - MON 01/02/2023
 * (done) edit: blog-post-plan-for-2023 - write about threejs, and linux
 * (done) edit: threejs-arrow-helper - proof read section 1
+* (done) edit: threejs-vector3-set-from-spherical-coords - proof read
 
-* () edit: threejs-vector3-set-from-spherical-coords - proof read
+* () forpost: threejs-vector3-set-from-spherical-coords - finish loop example
+* () edit: threejs-vector3-set-from-spherical-coords - write about loop example
 
 
 ### () - SUN 01/01/2023
