--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -15,8 +15,8 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * () edit: threejs-euler - proof read
 
 ### () - TUE 01/03/2023
-* () edit: threejs-line - proof read
-* () edit: threejs-vector3 - proof read
+* (done) edit: threejs-line - proof read opening and getting started
+* () edit: threejs-vector3 - proof read opening and getting started
 
 * () edit: blog-post-plan-for-2023 - write about electionjs
 * () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
