--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,18 +13,18 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ### () - WED 01/24/2023
 * () edit: threejs-examples-cube-stack-grid - proof read
 * () edit: threejs-euler - proof read
+* () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
+* () edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
+
 
 ### () - TUE 01/03/2023
 * (done) edit: threejs-line - proof read opening and getting started
 * (done) edit: threejs-vector3 - proof read opening and getting started
-
-* () edit: threejs-line - update code examples, write about new one
-* () edit: threejs-vector3 - check for post folder
+* (done) edit: threejs-line - update code examples, write about new one
 
 * () edit: blog-post-plan-for-2023 - write about electionjs
-* () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
 * () edit: blog-post-plan-for-2023 - write conclusion
-* () edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
+* () edit: threejs-vector3 - check for post folder
 
 * () hum beta world project
 
