--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,11 +21,13 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * (done) edit: threejs-line - proof read opening and getting started
 * (done) edit: threejs-vector3 - proof read opening and getting started
 * (done) edit: threejs-line - update code examples, write about new one
+* (done) edit: blog-post-plan-for-2023 - write about electionjs
+* (done) edit: blog-post-plan-for-2023 - write conclusion
 
-* () edit: blog-post-plan-for-2023 - write about electionjs
-* () edit: blog-post-plan-for-2023 - write conclusion
+* () start a shader-material r146 demo folder
+* () start a buffer-geometry-set-from-points demo folder
+
 * () edit: threejs-vector3 - check for post folder
-
 * () hum beta world project
 
 ### () - MON 01/02/2023
