--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -11,7 +11,7 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ## () - WEEK 1 - SUN 01/01/2023 - SAT 01/07/2023
 
 ### () - WED 01/24/2023
-* () edit: threejs-examples-cube-stack-grid - proof read
+* (done) edit: threejs-examples-cube-stack-grid - proof read
 * () edit: threejs-euler - proof read
 * () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
 * () edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
