--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -12,9 +12,8 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 
 ### () - WED 01/24/2023
 * (done) edit: threejs-examples-cube-stack-grid - proof read
-* () edit: threejs-euler - proof read
+* (done) edit: threejs-euler - proof read
 * () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
-* () edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
 
 * () start a buffer-geometry-set-from-points demo folder
 * () edit: threejs-vector3 - check for post folder
@@ -27,6 +26,7 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * (done) edit: threejs-line - update code examples, write about new one
 * (done) edit: blog-post-plan-for-2023 - write about electionjs
 * (done) edit: blog-post-plan-for-2023 - write conclusion
+* (done) edit: blog-post-plan-for-2023 - links to all older posts in bottom of the post, also do the same for older posts
 * (done) start a shader-material r146 demo folder
 
 ### () - MON 01/02/2023
