--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -10,13 +10,20 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ---------- --------->
 ## () - WEEK 1 - SUN 01/01/2023 - SAT 01/07/2023
 
+### () - SAT 01/07/2023
+
+### () - FRI 01/06/2023
+* (done) start post #1022 on threejs-
+
+### () - THU 01/05/2023
+* () edit: threejs-vector3 - check for post folder
+
 ### () - WED 01/24/2023
 * (done) edit: threejs-examples-cube-stack-grid - proof read
 * (done) edit: threejs-euler - proof read
-* () edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
+* (done) edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
 
 * () start a buffer-geometry-set-from-points demo folder
-* () edit: threejs-vector3 - check for post folder
 * () hum beta world project
 
 
