--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,7 +13,7 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ### () - SAT 01/07/2023
 
 ### () - FRI 01/06/2023
-* (done) start post #1022 on threejs-
+* (done) start post #1022 on threejs-buffer-geometry-set-from-points
 
 ### () - THU 01/05/2023
 * () edit: threejs-vector3 - check for post folder
@@ -22,8 +22,11 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 * (done) edit: threejs-examples-cube-stack-grid - proof read
 * (done) edit: threejs-euler - proof read
 * (done) edit: blog-post-plan-for-2023 - write more about todo lists such as the fact that I keept up with it!
+* (done) start a buffer-geometry-set-from-points r146 demo folder
 
-* () start a buffer-geometry-set-from-points demo folder
+* () start a buffer-geometry-set-from-points for post folder
+
+
 * () hum beta world project
 
 
