--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,10 +13,11 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ### () - SAT 01/07/2023
 
 ### () - FRI 01/06/2023
+* () edit: threejs-vector3 - check for post folder
 
 ### () - THU 01/05/2023
-* () start post #1022 on threejs-buffer-geometry-set-from-points
-* () edit: threejs-vector3 - check for post folder
+* (done) start post #1022 on threejs-buffer-geometry-set-from-points
+
 * () hum beta world project
 
 ### () - WED 01/24/2023
