--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -12,13 +12,13 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 
 ### () - SAT 01/07/2023
 
+
 ### () - FRI 01/06/2023
-* () edit: threejs-vector3 - check for post folder
+* (done) edit threejs-box-geometry - for post folder started with current examples
 
 ### () - THU 01/05/2023
 * (done) start post #1022 on threejs-buffer-geometry-set-from-points
-
-* () hum beta world project
+* (done) work on the hum beta world project
 
 ### () - WED 01/24/2023
 * (done) edit: threejs-examples-cube-stack-grid - proof read
