--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -1,9 +1,31 @@
 # todo list for JAN 2023
 
-THREEJS, VIDEOGROUND-BLOG_POSTS
+THREEJS, VIDEOGROUND-BETA-WORLD
 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
+
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 01/08/2023 - SAT 01/14/2023
+
+### () - SAT 01/14/2023
+
+### () - FRI 01/13/2023
+
+### () - THU 01/12/2023
+
+### () - WED 01/11/2023
+
+### () - TUE 01/10/2023
+
+### () - MON 01/09/2023
+
+### () - SUN 01/08/2023
+* () bw: timer-hum - alarm video
+
 
 <!-------- ----------
 -- WEEK 1
@@ -11,7 +33,7 @@ THREEJS, VIDEOGROUND-BLOG_POSTS
 ## () - WEEK 1 - SUN 01/01/2023 - SAT 01/07/2023
 
 ### () - SAT 01/07/2023
-
+* (done) have a for post folder for all threejs posts
 
 ### () - FRI 01/06/2023
 * (done) edit threejs-box-geometry - for post folder started with current examples
