--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -14,6 +14,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/14/2023
 
 ### () - FRI 01/13/2023
+* () start post #1023 on threejs-
 
 ### () - THU 01/12/2023
 
@@ -22,9 +23,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - TUE 01/10/2023
 
 ### () - MON 01/09/2023
+* () edit: 
+* () demo: start r146 demo for low poly world
 
 ### () - SUN 01/08/2023
-* () bw: timer-hum - alarm video
+* (done) bw: timer-hum - alarm video
 
 
 <!-------- ----------
