--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -23,7 +23,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - TUE 01/10/2023
 
 ### () - MON 01/09/2023
-* () edit: 
+* () edit: threejs-examples-lookat-with-apply-euler - proof read
 * () demo: start r146 demo for low poly world
 
 ### () - SUN 01/08/2023
