--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -24,9 +24,12 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - MON 01/09/2023
 * (done) edit: threejs-examples-lookat-with-apply-euler - proof read opening
-* () edit: threejs-examples-lookat-with-apply-euler - proof read getting started
-* () for post: threejs-examples-lookat-with-apply-euler - see about making an r1 of the examples
+* (done) edit: threejs-examples-lookat-with-apply-euler - proof read getting started
+* (done) for post: threejs-examples-lookat-with-apply-euler - see about making an r1 of the examples
+
+* () start a DAE folder for low poly world
 * () demo: start r146 demo for low poly world
+
 
 ### () - SUN 01/08/2023
 * (done) bw: timer-hum - alarm video
