--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,15 +21,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - WED 01/11/2023
 
 ### () - TUE 01/10/2023
+* () edit: threejs-box-helper - proof read
+
+* () start a DAE folder for low poly world
+* () demo: start r146 demo for low poly world
 
 ### () - MON 01/09/2023
 * (done) edit: threejs-examples-lookat-with-apply-euler - proof read opening
 * (done) edit: threejs-examples-lookat-with-apply-euler - proof read getting started
 * (done) for post: threejs-examples-lookat-with-apply-euler - see about making an r1 of the examples
-
-* () start a DAE folder for low poly world
-* () demo: start r146 demo for low poly world
-
 
 ### () - SUN 01/08/2023
 * (done) bw: timer-hum - alarm video
