--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -19,12 +19,16 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 01/12/2023
 
 ### () - WED 01/11/2023
-
-### () - TUE 01/10/2023
-* () edit: threejs-box-helper - proof read
+* () edit: threejs-examples-tool-source-layer-3d - just proof read
+* () edit: threejs-spotlights - opening, and getting started
 
 * () start a DAE folder for low poly world
 * () demo: start r146 demo for low poly world
+
+
+### () - TUE 01/10/2023
+* (done) edit: threejs-box-helper - proof read
+* (done) worked in beta world timer videos
 
 ### () - MON 01/09/2023
 * (done) edit: threejs-examples-lookat-with-apply-euler - proof read opening
