--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -19,7 +19,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 01/12/2023
 
 ### () - WED 01/11/2023
-* () edit: threejs-examples-tool-source-layer-3d - just proof read
+* (done) edit: threejs-examples-tool-source-layer-3d - just proof read
 * () edit: threejs-spotlights - opening, and getting started
 
 * () start a DAE folder for low poly world
