--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -20,7 +20,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - WED 01/11/2023
 * (done) edit: threejs-examples-tool-source-layer-3d - just proof read
-* () edit: threejs-spotlights - opening, and getting started
+* (done) edit: threejs-spotlights - opening, and getting started
 
 * () start a DAE folder for low poly world
 * () demo: start r146 demo for low poly world
