--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -22,6 +22,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-examples-tool-source-layer-3d - just proof read
 * (done) edit: threejs-spotlights - opening, and getting started
 
+* () videoground-blog-posts - video1 for threejs-phong-material
+
 * () start a DAE folder for low poly world
 * () demo: start r146 demo for low poly world
 
