--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -22,8 +22,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-examples-tool-source-layer-3d - just proof read
 * (done) edit: threejs-spotlights - opening, and getting started
 * (done) videoground-blog-posts - start video1 for threejs-phong-material
-
-* () edit: threejs-phong-material - embed new video1 for the post
+* (done) edit: threejs-phong-material - embed new video1 for the post
 
 * () start a DAE folder for low poly world
 * () demo: start r146 demo for low poly world
