--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -17,16 +17,18 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1023 on threejs-
 
 ### () - THU 01/12/2023
+* () forpost: threejs-shader-material - start the for post folder
+
+* () edit: 
+
+* () start a DAE folder for low poly world
+* () demo: start r146 demo for low poly world
 
 ### () - WED 01/11/2023
 * (done) edit: threejs-examples-tool-source-layer-3d - just proof read
 * (done) edit: threejs-spotlights - opening, and getting started
 * (done) videoground-blog-posts - start video1 for threejs-phong-material
 * (done) edit: threejs-phong-material - embed new video1 for the post
-
-* () start a DAE folder for low poly world
-* () demo: start r146 demo for low poly world
-
 
 ### () - TUE 01/10/2023
 * (done) edit: threejs-box-helper - proof read
