--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -14,15 +14,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/14/2023
 
 ### () - FRI 01/13/2023
-* () start post #1023 on threejs-
+* () start post #1023 on threejs-shader-material
 
 ### () - THU 01/12/2023
-* () forpost: threejs-shader-material - start the for post folder
-
-* () edit: 
-
-* () start a DAE folder for low poly world
-* () demo: start r146 demo for low poly world
+* (done) forpost: threejs-shader-material - start the for post folder
+* (done) videoground-betaworld : worked on new template7
 
 ### () - WED 01/11/2023
 * (done) edit: threejs-examples-tool-source-layer-3d - just proof read
