--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -14,7 +14,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/14/2023
 
 ### () - FRI 01/13/2023
-* () start post #1023 on threejs-shader-material
+* (done) start post #1023 on threejs-shader-material
 
 ### () - THU 01/12/2023
 * (done) forpost: threejs-shader-material - start the for post folder
