--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -12,9 +12,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## () - WEEK 2 - SUN 01/08/2023 - SAT 01/14/2023
 
 ### () - SAT 01/14/2023
+* () edit: threejs-shader-material -write about new vertex and base shader
 
 ### () - FRI 01/13/2023
 * (done) start post #1023 on threejs-shader-material
+* (done) forpost: threejs-shader-material - new vertex and base color demo
 
 ### () - THU 01/12/2023
 * (done) forpost: threejs-shader-material - start the for post folder
