--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,6 +13,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - SAT 01/14/2023
 * (done) edit: threejs-shader-material -write about new vertex and base shader
+* () edit: threejs-materials - link to threejs-shader-material
+* () edit: threejs-shader-material - link to threejs-materials
+* () edit: threejs-shader-material - link to and write about threejs-buffer-geometry
 
 ### () - FRI 01/13/2023
 * (done) start post #1023 on threejs-shader-material
