--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -5,6 +5,26 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 01/15/2023 - SAT 01/21/2023
+
+### () - SAT 01/21/2023
+
+### () - FRI 01/20/2023
+
+### () - THU 01/19/2023
+
+### () - WED 01/18/2023
+
+### () - TUE 01/17/2023
+
+### () - MON 01/16/2023
+
+### () - SUN 01/15/2023
+* () edit
+* () build and publish
 
 <!-------- ----------
 -- WEEK 2
@@ -15,7 +35,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) edit: threejs-shader-material -write about new vertex and base shader
 * (done) edit: threejs-materials - link to threejs-shader-material
 * (done) edit: threejs-shader-material - link to threejs-materials
-* () edit: threejs-shader-material - link to and write about threejs-buffer-geometry
+* (done) edit: threejs-shader-material - link to and write about threejs-buffer-geometry
 
 ### () - FRI 01/13/2023
 * (done) start post #1023 on threejs-shader-material
