--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,10 +21,18 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - TUE 01/17/2023
 
 ### () - MON 01/16/2023
+* () forpost: threejs-examples-curves-module - work on r1 of the module
+* () forpost: threejs-camera-move - new curves module section
+
+* () build and publish
 
 ### () - SUN 01/15/2023
-* () edit
-* () build and publish
+* (done) forpost: threejs-camera-move - update code examples
+
+* () forpost: threejs-camera-move - expand basic section
+* () edit: threejs-camera-move - write about new basic section examples
+
+* () new r146 demo on color-buffer-attribute
 
 <!-------- ----------
 -- WEEK 2
