--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -29,8 +29,7 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SUN 01/15/2023
 * (done) forpost: threejs-camera-move - update code examples
 * (done) forpost: threejs-camera-move - expand basic section
-
-* () edit: threejs-camera-move - write about new basic section examples
+* (done) edit: threejs-camera-move - write about new basic section examples
 
 * () new r146 demo on color-buffer-attribute
 
