--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,12 +13,14 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/21/2023
 
 ### () - FRI 01/20/2023
+* () start post #1024 on threejs-buffer-geometry-attributes-color
 
 ### () - THU 01/19/2023
 
 ### () - WED 01/18/2023
 
 ### () - TUE 01/17/2023
+* () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - MON 01/16/2023
 * () forpost: threejs-examples-curves-module - work on r1 of the module
@@ -26,12 +28,13 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 * () build and publish
 
+* () new r146 demo on buffer-geometry-attributes-color-update
+
 ### () - SUN 01/15/2023
 * (done) forpost: threejs-camera-move - update code examples
 * (done) forpost: threejs-camera-move - expand basic section
 * (done) edit: threejs-camera-move - write about new basic section examples
-
-* () new r146 demo on color-buffer-attribute
+* (done) new r146 demo on buffer-geometry-attributes-color
 
 <!-------- ----------
 -- WEEK 2
