--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -24,7 +24,13 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - MON 01/16/2023
 * () forpost: threejs-examples-curves-module - work on r1 of the module
+* () edit: threejs-examples-curves-module - write about new r1 of module and demos
+
 * () forpost: threejs-camera-move - new curves module section
+* () edit: threejs-camera-move - write about new curves section
+
+* () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
+* () videoground-blog-posts : threejs-camera-move - video2 for the post
 
 * () build and publish
 
