--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -18,23 +18,27 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - THU 01/19/2023
 
 ### () - WED 01/18/2023
+* () forpost: threejs-camera-move - new sequence hooks demo
+* () edit: threejs-camera-move - write about new demo
 
 ### () - TUE 01/17/2023
+* () edit: threejs-sphere - proof read
+* () edit: threejs-directional-light - proof read
+
+* () build and publish
+
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
-### () - MON 01/16/2023
-* () forpost: threejs-examples-curves-module - work on r1 of the module
-* () edit: threejs-examples-curves-module - write about new r1 of module and demos
 
-* () forpost: threejs-camera-move - new curves module section
-* () edit: threejs-camera-move - write about new curves section
+### () - MON 01/16/2023
+* (done) forpost: threejs-examples-curves-module - work on r1 of the module
+* (done) edit: threejs-examples-curves-module - write about new r1 of module and demos
+* (done) forpost: threejs-camera-move - new curves module section
+* (done) edit: threejs-camera-move - write about new curves section
 
 * () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
 * () videoground-blog-posts : threejs-camera-move - video2 for the post
 
-* () build and publish
-
-* () new r146 demo on buffer-geometry-attributes-color-update
 
 ### () - SUN 01/15/2023
 * (done) forpost: threejs-camera-move - update code examples
