--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -22,23 +22,24 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () edit: threejs-camera-move - write about new demo
 
 ### () - TUE 01/17/2023
+<!-- Quick edit -->
 * () edit: threejs-sphere - proof read
 * () edit: threejs-directional-light - proof read
-
+<!-- new blog post videos -->
+* () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
+* () videoground-blog-posts : threejs-camera-move - video2 for the post
+* () edit: threejs-examples-curves-module - embed video1
+* () edit: threejs-camera-move - embed video2
+<!-- other -->
+* () new header image
 * () build and publish
-
 * () forpost: new forpost folder for buffer-geometry-attributes-color
-
 
 ### () - MON 01/16/2023
 * (done) forpost: threejs-examples-curves-module - work on r1 of the module
 * (done) edit: threejs-examples-curves-module - write about new r1 of module and demos
 * (done) forpost: threejs-camera-move - new curves module section
 * (done) edit: threejs-camera-move - write about new curves section
-
-* () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
-* () videoground-blog-posts : threejs-camera-move - video2 for the post
-
 
 ### () - SUN 01/15/2023
 * (done) forpost: threejs-camera-move - update code examples
