--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -23,8 +23,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - TUE 01/17/2023
 <!-- Quick edit -->
-* () edit: threejs-sphere - proof read
-* () edit: threejs-directional-light - proof read
+* (done) edit: threejs-sphere - proof read opening, and getting started
+* () edit: threejs-directional-light - proof read opeing, and getting started
 <!-- new blog post videos -->
 * () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
 * () videoground-blog-posts : threejs-camera-move - video2 for the post
