--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -16,24 +16,22 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () start post #1024 on threejs-buffer-geometry-attributes-color
 
 ### () - THU 01/19/2023
+* () videoground-blog-posts : threejs-camera-move - video2 for the post
+* () edit: threejs-camera-move - embed video2
 
 ### () - WED 01/18/2023
-* () forpost: threejs-camera-move - new sequence hooks demo
-* () edit: threejs-camera-move - write about new demo
+<!-- other -->
+* () new header image
+* () build and publish
+* () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - TUE 01/17/2023
 <!-- Quick edit -->
 * (done) edit: threejs-sphere - proof read opening, and getting started
 * (done) edit: threejs-directional-light - proof read opeing, and getting started
 <!-- new blog post videos -->
-* () videoground-blog-posts : threejs-examples-curves-module - video1 for the post
-* () videoground-blog-posts : threejs-camera-move - video2 for the post
-* () edit: threejs-examples-curves-module - embed video1
-* () edit: threejs-camera-move - embed video2
-<!-- other -->
-* () new header image
-* () build and publish
-* () forpost: new forpost folder for buffer-geometry-attributes-color
+* (done) videoground-blog-posts : threejs-examples-curves-module - video1 for the post
+* (done) edit: threejs-examples-curves-module - embed video1
 
 ### () - MON 01/16/2023
 * (done) forpost: threejs-examples-curves-module - work on r1 of the module
