--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -20,16 +20,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () edit: threejs-camera-move - embed video2
 
 ### () - WED 01/18/2023
-<!-- other -->
+<!-- build -->
 * () new header image
 * () build and publish
+<!-- new post -->
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - TUE 01/17/2023
-<!-- Quick edit -->
 * (done) edit: threejs-sphere - proof read opening, and getting started
 * (done) edit: threejs-directional-light - proof read opeing, and getting started
-<!-- new blog post videos -->
 * (done) videoground-blog-posts : threejs-examples-curves-module - video1 for the post
 * (done) edit: threejs-examples-curves-module - embed video1
 
