--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -13,13 +13,20 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - SAT 01/21/2023
 
 ### () - FRI 01/20/2023
+<!-- write new post -->
 * () start post #1024 on threejs-buffer-geometry-attributes-color
 
 ### () - THU 01/19/2023
-* () videoground-blog-posts : threejs-camera-move - video2 for the post
-* () edit: threejs-camera-move - embed video2
+<!-- edit -->
+* () threejs-depth-material - proof read opening and getting started
+* () threejs-depth-material - update code
+<!-- new post -->
+* () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - WED 01/18/2023
+<!-- edit -->
+* () threejs-light - proof read opening and getting started
+* () threejs-light - code update
 <!-- build -->
 * () new header image
 * () build and publish
