--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -18,8 +18,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - THU 01/19/2023
 <!-- edit -->
+* (done) threejs-depth-material - update code
 * () threejs-depth-material - proof read opening and getting started
-* () threejs-depth-material - update code
 <!-- new post -->
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
