--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -18,15 +18,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - THU 01/19/2023
 <!-- edit -->
-* (done) threejs-depth-material - update code
+* () threejs-depth-material - update code
 * () threejs-depth-material - proof read opening and getting started
 <!-- new post -->
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - WED 01/18/2023
 <!-- edit -->
-* () threejs-light - proof read opening and getting started
-* () threejs-light - code update
+* (done) threejs-light - proof read opening and getting started
+* (done) threejs-light - code update
 <!-- build -->
 * () new header image
 * () build and publish
