--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -28,8 +28,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) threejs-light - proof read opening and getting started
 * (done) threejs-light - code update
 <!-- build -->
-* () new header image
-* () build and publish
+* (done) new header image
+* (done) build and publish
 <!-- new post -->
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
