--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -24,14 +24,11 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * () forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - WED 01/18/2023
-<!-- edit -->
 * (done) threejs-light - proof read opening and getting started
 * (done) threejs-light - code update
-<!-- build -->
 * (done) new header image
 * (done) build and publish
-<!-- new post -->
-* () forpost: new forpost folder for buffer-geometry-attributes-color
+* (done) forpost: new forpost folder for buffer-geometry-attributes-color
 
 ### () - TUE 01/17/2023
 * (done) edit: threejs-sphere - proof read opening, and getting started
