--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -18,10 +18,10 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 
 ### () - THU 01/19/2023
 <!-- edit -->
-* () threejs-depth-material - proof read opening and getting started
-* () threejs-depth-material - update code
+* (done) threejs-depth-material - proof read opening and getting started
+* (done) threejs-depth-material - update code
 <!-- new post -->
-* () forpost: new forpost folder for buffer-geometry-attributes-color
+* () forpost: work on forpost folder for buffer-geometry-attributes-color
 
 ### () - WED 01/18/2023
 * (done) threejs-light - proof read opening and getting started
