--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -20,8 +20,9 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 <!-- edit -->
 * (done) threejs-depth-material - proof read opening and getting started
 * (done) threejs-depth-material - update code
-<!-- new post -->
-* () forpost: work on forpost folder for buffer-geometry-attributes-color
+<!-- videoground-beta-world-->
+* () upload new three-hum timer video
+<!-- videoground-blog-posts -->
 
 ### () - WED 01/18/2023
 * (done) threejs-light - proof read opening and getting started
