--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -21,7 +21,8 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 * (done) threejs-depth-material - proof read opening and getting started
 * (done) threejs-depth-material - update code
 <!-- videoground-beta-world-->
-* () upload new three-hum timer video
+* (done) worked on new template7 video2 file with updated colon object, and using r1 of curve.js
+* () start a new timer-train video folder
 <!-- videoground-blog-posts -->
 
 ### () - WED 01/18/2023
