--- a/todo/today/todo_2023_01.md
+++ b/todo/today/todo_2023_01.md
@@ -15,15 +15,15 @@ THREEJS, VIDEOGROUND-BETA-WORLD
 ### () - FRI 01/20/2023
 <!-- write new post -->
 * () start post #1024 on threejs-buffer-geometry-attributes-color
+<!-- videoground-blog-posts -->
+* () threejs-buffer-geometry-attributes-color - video1
 
 ### () - THU 01/19/2023
 <!-- edit -->
 * (done) threejs-depth-material - proof read opening and getting started
 * (done) threejs-depth-material - update code
-<!-- videoground-beta-world-->
 * (done) worked on new template7 video2 file with updated colon object, and using r1 of curve.js
-* () start a new timer-train video folder
-<!-- videoground-blog-posts -->
+* (done) start a new timer-train video folder
 
 ### () - WED 01/18/2023
 * (done) threejs-light - proof read opening and getting started
